syntax = "proto3";

package task;

option go_package = "./;taskService";

import "google/protobuf/timestamp.proto";


service TaskAPI {
	rpc GetTasks(TaskRequest) returns (TaskReply);
}

message TaskRequest {
	int64 user_id = 1;
}

message TaskReply {
	repeated Tasks tasks = 1;
}

message Tasks {
	int64 id = 1;
  uint32 user_id = 2;    
  uint32 category_id = 3;
  string title = 4;
  bool completed = 5;
  google.protobuf.Timestamp due_date = 6;
  google.protobuf.Timestamp created_at = 7;
  google.protobuf.Timestamp updated_at = 8;
}